Fix: Cover image extraction uses correct DOM selector (div.col-image img), separate ImageProxyController, fix author parsing